--- a/Applications/App Market.app/Localizations/Chinese.lang
+++ b/Applications/App Market.app/Localizations/Chinese.lang
@@ -13,14 +13,14 @@
 	typeUserName = "用户名",
 	yourText = "你:",
 	hereBeYourDialogs = "这是你们的谈话内容",
-	hideApplicationIcons = "Hide application icons",
+	hideApplicationIcons = "隱藏應用程序圖標",
 	
 	categoryOverview = "预览",
 	categoryApplications = "软件",
 	categoryLibraries = "库",
 	categoryScripts = "脚本",
 	categoryUpdates = "更新",
-
+	
 	statisticsNewUser = "新用户",
 	statisticsMostPopularUser = "最积极",
 	statisticsUsersCount = "用户数量",
@@ -28,16 +28,16 @@
 	statisticsReviewsCount = "评论数量",
 	statisticsPopularPublication = "最受欢迎的软件",
 	statisticsMessagesCount = "信息数",
-
-	whatsNew = "What's new",
-	whatsNewInVersion = "What's new in version",
-	areYouSure = "Are your sure want to delete publication?",
-	createShortcut = "Create desktop shortcut",
-	editing = "Edit publication",
-	publicationName = "Publication name",
-	mainFileURL = "Main file URL",
-	mainFileName = "Main file name",
-	iconURL = "Icon URL",
+	
+	whatsNew = "什麼是新的",
+	whatsNewInVersion = "版本的新功能",
+	areYouSure = "您確定要刪除出版物嗎？",
+	createShortcut = "創建桌面快捷方式",
+	editing = "編輯出版物",
+	publicationName = "出版物名稱",
+	mainFileURL = "主文件網址",
+	mainFileName = "主文件名",
+	iconURL = "圖標網址",
 	description = "简介",
 	dependenciesAndResources = "依赖和资源",
 	save = "保存",
@@ -46,11 +46,11 @@
 	download = "下载",
 	downloading = "下载中",
 	tree = "要下载的文件",
-	addDependency = "Add dependency",
-	existingPublication = "Existing publication",
-	fileByURL = "File via URL",
+	addDependency = "添加依賴",
+	existingPublication = "現有出版物",
+	fileByURL = "通過 URL 歸檔",
 	add = "添加",
-	relativePath = "Relative path",
+	relativePath = "相對路徑",
 	localizationDependency = "本地化文件",
 	
 	login = "登录",
@@ -59,8 +59,8 @@
 	password = "密码",
 	nicknameOrEmail = "邮箱或昵称",
 	registrationDate = "注册日期",
-	edit = "Edit publication",
-	remove = "Delete publication",
+	edit = "編輯出版物",
+	remove = "刪除出版物",
 	open = "打开",
 	clearCache = "清除缓存",
 	exit = "注销",
@@ -69,26 +69,26 @@
 	singleSession = "这不是我的电脑！",
 	currentPassword = "目前的密码",
 	language = "简介语言",
-	publications = "Publications",
+	publications = "出版物",
 	notRegistered = "还没注册？",
 	createAccount = "注册",
 	registrationSuccessfull = "请去检查邮箱，并点击发来的链接",
-
+	
 	search = "搜索",
 	byPopularity = "最受欢迎",
 	byRating = "最高评分",
 	byDate = "创建日期",
 	byName = "通过名称",
-	desc = "Descending",
-	asc = "Ascending",
-	publish = "Publish software",
+	desc = "降序",
+	asc = "上升",
+	publish = "發佈軟件",
 	install = "安装",
 	installed = "已安装",
 	update = "更新",
 	page = "页",
 	updateAll = "更新所有",
 	noUpdates = "已经是最新版",
-
+	
 	changeReview = "修改评论",
 	developer = "开发者",
 	version = "版本",
@@ -99,7 +99,7 @@
 	yourRating = "你的评分",
 	writeReviewHere = "在这里写评论",
 	choosePath = "选择目录",
-	reviewsOfUsers = "Users reviews",
+	reviewsOfUsers = "用戶評論",
 	averageRating = "综合评分",
 	writeReview = "创建评论",
 	dependencies = "依赖",
