--- a/Applications/MineCode IDE.app/Localizations/Dutch.lang
+++ b/Applications/MineCode IDE.app/Localizations/Dutch.lang
@@ -7,10 +7,10 @@
 	convertCase = "Converteer case",
 	openingFile = "Openen",
 	arguments = "Afzonderlijke argumenten via komma",
-	launchWithArguments = "Voer met argumenten uit",	
+	launchWithArguments = "Voer met argumenten uit",
 	addBreakpoint = "Breekpunt toevoegen",
 	clearBreakpoints = "Breekpunten verwijderen",
-	finishDebug = "Stop",
+	finishDebug = "Hou op",
 	continueDebug = "Hervat",
 	gotoLine = "Ga naar lijn",
 	lineNumber = "Lijn",
@@ -44,7 +44,7 @@
 	lines = " lijnen, ",
 	symbols = " symbolen",
 	file = "Bestand",
-	cursor = "Cursor: ",
+	cursor = "Cursor:",
 	new = "Nieuw",
 	open = "Open",
 	openFile = "Open bestand",
