--- a/Applications/MineCode IDE.app/Localizations/French.lang
+++ b/Applications/MineCode IDE.app/Localizations/French.lang
@@ -1,16 +1,16 @@
 {
-	toggleSyntaxHighlight = "Toggle syntax highlighting",
-	toggleAutocompletion = "Toggle autocompletion",
-	toggleAutoBrackets = "Toggle autobrackets",
+	toggleSyntaxHighlight = "Basculer la coloration syntaxique",
+	toggleAutocompletion = "Basculer la saisie semi-automatique",
+	toggleAutoBrackets = "Basculer les parenthèses automatiques",
 	toUpperCase = "Monter",
 	toLowerCase = "Baisser",
 	convertCase = "Convertir le cas",
 	openingFile = "Ouverture",
 	arguments = "Séparer les arguments par une virgule",
-	launchWithArguments = "Exécuter avec des arguments",	
+	launchWithArguments = "Exécuter avec des arguments",
 	addBreakpoint = "Surligner la ligne",
 	clearBreakpoints = "Retirer les surlignages",
-	finishDebug = "Stop",
+	finishDebug = "Arrêt",
 	continueDebug = "Continuer",
 	gotoLine = "Aller à la ligne",
 	lineNumber = "Ligne",
@@ -34,7 +34,7 @@
 	cursorSymbol = "Symbole",
 	cursorColor = "Couleur",
 	cursorBlinkDelay = "Délai de clignotement",
-	selection = "Selection: ",
+	selection = "Sélection:",
 	none = "aucun",
 	properties = "Propriétés",
 	about = "À propos",
