--- a/Applications/Settings.app/Localizations/Italian.lang
+++ b/Applications/Settings.app/Localizations/Italian.lang
@@ -7,14 +7,14 @@
 	screenAutoScale = "Rilevamento automatico",
 	screenWidth = "Larghezza",
 	screenHeight = "Altezza",
-	screenPreferredMonitor = "Monitor",
+	screenPreferredMonitor = "Tenere sotto controllo",
 	screenScaleInfo = "Utilizzando questa opzione vi permetterà di selezionare la risoluzione ottimale dello schermo per sbarazzarsi dell'effetto \" rettangoli neri\"",
 	screenInvalidResolution = "Il testo nei campi di input dovrebbe essere composto da cifre, dovrebbe essere superiore a %d, e la risoluzione massima non dovrebbe superare %d caratteri",
 	screenPreciseMode = "Modalità precisa",
 	
-	wallpaper = "Wallpaper",
-	wallpaperWallpaper = "Wallpaper",
-	wallpaperScreensaver = "Screensaver",
+	wallpaper = "Sfondo",
+	wallpaperWallpaper = "Sfondo",
+	wallpaperScreensaver = "Salvaschermo",
 	wallpaperScreensaverPath = "Percorso script Screensaver",
 	wallpaperScreensaverEnabled = "Screensaver abilitato",
 	wallpaperScreensaverDelay = "Ritardo",
@@ -38,7 +38,7 @@
 	appearanceDesktopBackground = "Sfondo Desktop",
 	appearanceDock = "Colore aggancio",
 	appearanceMenu = "Menu",
-	appearanceBlurEnabled = "Interface blurring",
+	appearanceBlurEnabled = "Sfocatura dell'interfaccia",
 	appearanceTransparencyEnabled = "Trasparenza interfaccia",
 	appearanceTransparencyInfo = "Disabilitare le ultime due opzioni ridurrà significativamente il numero di chiamate dirette alla CPU / GPU e aumenterà le prestazioni",
 	appearanceDropDownDefaultBackground = "Sfondo menu a discesa",
