--- a/Applications/Settings.app/Localizations/Japanese.lang
+++ b/Applications/Settings.app/Localizations/Japanese.lang
@@ -21,7 +21,7 @@
 	wallpaperPath = "壁紙の画像パス",
 	wallpaperEnabled = "壁紙を有効にする",
 	wallpaperBrightness = "壁紙の明るさ",
-	wallpaperStretch = "Stretch",
+	wallpaperStretch = "ストレッチ",
 	wallpaperCenter = "中央",
 	wallpaperInfo = "このオプションを無効にすると、RAMの消費量が大幅に削減され、パフォーマンスが向上します。",
 	
@@ -32,18 +32,18 @@
 	appearanceHorizontal = "水平",
 	appearanceVertical = "垂直",
 	appearanceSize = "再婚サイズ",
-	appearanceSpace = "Space between icons",
+	appearanceSpace = "アイコン間のスペース",
 	appearanceColorScheme = "配色",
 	appearanceFiles = "ファイルプロパティ",
 	appearanceDesktopBackground = "デスクトップの背景",
 	appearanceDock = "Dockの背景",
 	appearanceMenu = "Menuの背景",
-	appearanceBlurEnabled = "Interface blurring",
+	appearanceBlurEnabled = "インターフェースのぼかし",
 	appearanceTransparencyEnabled = "インターフェースの透明度",
 	appearanceTransparencyInfo = "最後の2つのオプションを無効にすると、CPU / GPUへのアクセス数が大幅に減り、パフォーマンスが向上します。",
 	appearanceDropDownDefaultBackground = "ドロップダウンメニューの背景",
 	appearanceDropDownDefaultText = "ドロップダウンメニューのテキスト",
-	appearanceDropDownSeparator = "Drop down menu separator",
+	appearanceDropDownSeparator = "ドロップダウンメニューセパレータ",
 	
 	users = "ユーザー",
 	
@@ -102,7 +102,7 @@
 	usersAddPasswordPlaceholder1 = "パスワードを記入",
 	usersAddPasswordPlaceholder2 = "付与されたパスワードを送信",
 	usersPasswordsArentEqual = "パスワードが違います",
-	usersClaim = "Claim computer block",
+	usersClaim = "コンピューターブロックを要求する",
 	usersClaimInfo = "あなたはとあるプレイヤーのためにコンピュータブロックへの私的アクセスを作成することができます。 その場合は、プレーヤーはオンラインでなければなりません",
 	usersClaimPlaceholder = "オンラインのユーザー名を記入",
 }
