--- a/Applications/Settings.app/Localizations/Spanish.lang
+++ b/Applications/Settings.app/Localizations/Spanish.lang
@@ -32,13 +32,13 @@
 	appearanceHorizontal = "Horizontalmente",
 	appearanceVertical = "Verticalmente",
 	appearanceSize = "Tamaño de los iconos",
-	appearanceSpace = "Space between icons",
+	appearanceSpace = "Espacio entre iconos",
 	appearanceColorScheme = "Esquema de color",
 	appearanceFiles = "Propiedades de archivos",
 	appearanceDesktopBackground = "Fondo de Escritorio",
 	appearanceDock = "Fondo del Dock",
 	appearanceMenu = "Fondo del Menu",
-	appearanceBlurEnabled = "Interface blurring",
+	appearanceBlurEnabled = "Desenfoque de interfaz",
 	appearanceTransparencyEnabled = "Transparecia de la Interfaz",
 	appearanceTransparencyInfo = "Desactivar las Ultimas dos opciones va a reducir significativamenteel numero de llamadas directas a la CPU/GPU y incrementara el rendimiento",
 	appearanceDropDownDefaultBackground = "Fondo del menú desplegable",
