--- a/Applications/App Market.app/Localizations/German.lang
+++ b/Applications/App Market.app/Localizations/German.lang
@@ -13,14 +13,14 @@
 	typeUserName = "Typ Benutzername",
 	yourText = "Sie:",
 	hereBeYourDialogs = "Hier werden Ihre Gespräche",
-	hideApplicationIcons = "Hide application icons",
+	hideApplicationIcons = "Anwendungssymbole ausblenden",
 	
 	categoryOverview = "Überblick",
-	categoryApplications = "Applications",
+	categoryApplications = "Anwendungen",
 	categoryLibraries = "Bibliothek",
 	categoryScripts = "Skript",
 	categoryUpdates = "Aktualisierung",
-
+	
 	statisticsNewUser = "Neuer Benutzer",
 	statisticsMostPopularUser = "Aktivsten",
 	statisticsUsersCount = "Anzahl der Benutzer",
@@ -28,7 +28,7 @@
 	statisticsReviewsCount = "Bewertungen zählen",
 	statisticsPopularPublication = "(beliebte Publikation)",
 	statisticsMessagesCount = "Nachrichten zählen",
-
+	
 	whatsNew = "Was gibt ' s neues",
 	whatsNewInVersion = "Was in der version neu ist",
 	areYouSure = "Möchten Sie die Veröffentlichung wirklich löschen?",
@@ -44,7 +44,7 @@
 	cancel = "Stornieren",
 	fileName = "Dateinamen",
 	download = "Herunterladen",
-	downloading = "Downloading",
+	downloading = "wird heruntergeladen",
 	tree = "Baum des Herunterladens von Dateien",
 	addDependency = "Abhängigkeit hinzufügen",
 	existingPublication = "Bestehende Publikation",
@@ -69,11 +69,11 @@
 	singleSession = "Es ist nicht mein computer",
 	currentPassword = "Aktuelles Passwort",
 	language = "Beschreibungen Sprache",
-	publications = "Publications",
+	publications = "Veröffentlichungen",
 	notRegistered = "Noch nicht registriert?",
 	createAccount = "Konto erstellen",
 	registrationSuccessfull = "Überprüfen Sie Ihren E-mail-und spam-Ordner, um Ihr Konto zu überprüfen",
-
+	
 	search = "Suche",
 	byPopularity = "Nach Beliebtheit",
 	byRating = "Nach Bewertung",
@@ -84,14 +84,14 @@
 	publish = "Software veröffentlichen",
 	install = "Installieren",
 	installed = "Installiert",
-	update = "Update",
+	update = "Aktualisieren",
 	page = "Seite",
 	updateAll = "Alle aktualisieren",
 	noUpdates = "Sie haben keine updates",
-
+	
 	changeReview = "Überprüfung ändern",
 	developer = "Entwickler",
-	version = "Version",
+	version = "Ausführung",
 	license = "Lizenz",
 	category = "Zimmerkategorie",
 	updated = "Aktualisiert",
