--- a/Applications/VK.app/Localizations/Dutch.lang
+++ b/Applications/VK.app/Localizations/Dutch.lang
@@ -1,17 +1,17 @@
 {
-	leftBarOffset = 5,
-
+	leftBarOffset = "5",
+	
 	settingsStyle = "Kleurschema",
 	settingsAdditional = "Aanvullende eigenschappen",
-
+	
 	invalidPassword = "Ongeldige login of wachtwoord",
 	username = "E-mail of telefoon nummer",
 	password = "Wachtwoord",
 	login = "Log in",
 	twoFactorEnabled = "2FA enthalten",
-	twoFactor = "2FA code",
+	twoFactor = "2FA-code",
 	saveLogin = "Sla login informatie op:",
-
+	
 	loadCountConversations = "Het aantal geladen dialogen",
 	loadCountMessages = "Aantal te downloaden berichten",
 	loadCountNews = "Aantal gedownloade nieuws",
@@ -19,7 +19,7 @@
 	loadCountWall = "Aantal te downloaden berichten",
 	loadCountFriends = "Aantal vrienden om te downloaden",
 	loadCountDocs = "Aantal te downloaden documenten",
-
+	
 	profile = "Profiel",
 	message = "Bericht",
 	sendMessage = "Verzend bericht",
@@ -27,13 +27,28 @@
 	friendRequestSent = "Verzoek is verzonden",
 	userSubscribedToYou = "Geabonneerd op jou",
 	userIsYourFriend = "Je hebt vrienden",
-
+	
 	profileCounters = {
-		{ field = "followers", description = " volgers" },
-		{ field = "friends", description = " vrienden" },
-		{ field = "photos", description = " foto's" },
-		{ field = "videos", description = " video's" },
-		{ field = "audios", description = " audio" },
+		{
+			field = "followers",
+			description = " volgers",
+		},
+		{
+			field = "friends",
+			description = " vrienden",
+		},
+		{
+			field = "photos",
+			description = " foto's",
+		},
+		{
+			field = "videos",
+			description = " video's",
+		},
+		{
+			field = "audios",
+			description = " audio",
+		},
 	},
 	profileShowAdditional = "Toon details",
 	profileHideAdditional = "Verberg gedetailleerde informatie",
@@ -104,7 +119,7 @@
 			"minnares",
 			"in het burgerlijk huwelijk",
 			[0] = "niet gespecificeerd",
-		}
+		},
 	},
 	personalPoliticalTypes = {
 		"Communist",
@@ -142,13 +157,13 @@
 		"Neutraal",
 		"Positief",
 	},
-
+	
 	friends = "Vrienden",
 	friendsOnline = "Online Vrienden",
 	friendsMutual = "Gemeenschappelijke vrienden",
-
+	
 	news = "Nieuwsfeed",
-
+	
 	send = "Verzenden",
 	conversations = "Conversaties",
 	you = "Jij: ",
@@ -173,9 +188,9 @@
 	
 	documents = "Documenten",
 	documentsCount = "Totaal aantal documenten",
-	documentsAdd = "Upload document",
-
+	documentsAdd = "Document uploaden",
+	
 	settings = "Instellingen",
-
+	
 	exit = "Log uit",
 }
