--- a/Applications/MineCode IDE.app/Localizations/German.lang
+++ b/Applications/MineCode IDE.app/Localizations/German.lang
@@ -1,13 +1,13 @@
 {
-	toggleSyntaxHighlight = "Toggle syntax highlighting",
-	toggleAutocompletion = "Toggle autocompletion",
-	toggleAutoBrackets = "Toggle autobrackets",
+	toggleSyntaxHighlight = "Syntaxhervorhebung umschalten",
+	toggleAutocompletion = "Automatische Vervollständigung umschalten",
+	toggleAutoBrackets = "Automatische Klammern umschalten",
 	toUpperCase = "Nach oben",
 	toLowerCase = "Senken",
 	convertCase = "Konvertieren Fall",
 	openingFile = "Öffnung",
 	arguments = "Separate Argumente per Befehl",
-	launchWithArguments = "Mit Argumenten ausführen",	
+	launchWithArguments = "Mit Argumenten ausführen",
 	addBreakpoint = "Haltepunkt hinzufügen",
 	clearBreakpoints = "Haltepunkte löschen",
 	finishDebug = "Anhalten",
@@ -44,7 +44,7 @@
 	lines = " Lines, ",
 	symbols = " Symbole",
 	file = "Datei",
-	cursor = "Cursor: ",
+	cursor = "Mauszeiger: ",
 	new = "Neu",
 	open = "Öffnen",
 	openFile = "Datei öffnen",
@@ -62,7 +62,7 @@
 	edit = "Bearbeiten",
 	comment = "Kommentar Umschalten",
 	indent = "Einzug",
-	unindent = "Unindent",
+	unindent = "Nicht einrücken",
 	flashEEPROM = "Flash zu EEPROM",
-	flashingEEPROM = "Blinkt im Gange. Computer nicht ausschalten...",
+	flashingEEPROM = "Blinkt im Gange. Computer nicht ausschalten..."
 }
