--- a/Applications/Picture View.app/Localizations/German.lang
+++ b/Applications/Picture View.app/Localizations/German.lang
@@ -7,6 +7,6 @@
 	setWallpaper = "Möchten Sie dieses Bild als Hintergrundbild festlegen?",
 	yes = "Ja",
 	no = "Nein",
-	start = "Start",
-	cancel = "Absagen",
+	start = "Anfang",
+	cancel = "Absagen"
 }
