--- a/Localizations/German.lang
+++ b/Localizations/German.lang
@@ -45,7 +45,7 @@
 	toDirectory = "Zum Verzeichnis",
 	copying = "Kopieren",
 	faylaBlyad = "Datei",
-
+	
 	areYouSure = "Sind Sie sicher?",
 	emptyTrash = "Papierkorb leeren",
 	type = "Art",
@@ -56,9 +56,9 @@
 	folder = "Ordner",
 	unknown = "Unbekannt",
 	calculatingSize = "Berechne Größe...",
-	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
-	fileDeletingFailure = "Failed to delete file",
-
+	filesWillBeRemovedPermanently = "Datei(en) werden dauerhaft entfernt",
+	fileDeletingFailure = "Datei konnte nicht gelöscht werden",
+	
 	properties = "Eigenschaften",
 	newFolderFromChosen = "Neuen Ordner wählen.",
 	create = "Neu",
@@ -89,38 +89,38 @@
 	flashEEPROM = "Flash zum EEPROM",
 	flashingEEPROM = "Flashvorgang. Computer nicht ausschalten...",
 	print3D = "Modell drucken",
-
+	
 	sortBy = "Sortieren",
 	sortByType = "Nach Typ",
 	sortByName = "Nach Namen",
 	sortByDate = "Nach Datum",
-
+	
 	aboutSystem = "Über das System",
 	updates = "Sicherheitsaktualisierungen",
 	update = "Aktualisieren",
 	shutdown = "Herunterfahren",
 	logout = "Abmelden",
 	reboot = "Neustarten",
-
+	
 	shortcutIsCorrupted = "Verknüpfung ist fehlerhaft oder nicht mehr vorhanden.",
 	sortAutomatically = "Am Raster ausrichten",
 	onDesktop = "Auf dem Desktop",
 	inCurrentDirectory = "Im aktuellen Verzeichnis",
-
+	
 	errorWhileRunningProgram = "Fehler beim Ausführen",
 	sendedFeedback = "Fehlerbericht wurde gesendet",
 	sendFeedback = "Fehlerbericht senden",
 	yourContacts = "Meine Kontakte",
 	additionalInfo = "Zusätzliche Informationen",
 	stackTraceback = "Stacktrace",
-
+	
 	favourite = "Favoriten",
 	search = "Suchen",
 	mounts = "Einhängen",
-
+	
 	uploadToPastebin = "Auf Pastebin hochladen",
 	pasteName = "Name einfügen",
 	uploading = "Hochladen läuft...",
 	uploadingSuccess = "Hochgeladen",
-	uploadingFailure = "Hochladen fehlgeschlagen!",
+	uploadingFailure = "Hochladen fehlgeschlagen!"
 }
