--- a/Applications/3D Print.app/Localizations/French.lang
+++ b/Applications/3D Print.app/Localizations/French.lang
@@ -1,11 +1,11 @@
-{	
+{
 	help = "Aidez-moi",
 	helpInfo = {
 		"• Chaque modèle est composé de formes. Leur nombre dépend des propriétés du serveur, mais par défaut, il s'agit de 24 pour un modèle.",
 		"• Le modèle peut également avoir 2 états: passif et actif. Si vous placez un modèle imprimé dans Minecraft World et effectuez un clic dessus, le modèle changera son état en sens inverse. Le nombre de formes est limité aux deux états",
 		"• Maintenez le bouton gauche de la souris pour placer le premier point de la forme par X et Y. Faites glisser la souris pour redimensionner la forme. Utilisez la molette de la souris pour changer la coordonnée Z. Relâchez le bouton pour terminer la modification de forme",
 		"• Appuyez sur le bouton droit de la souris pour sélectionner la forme sous le curseur.",
-		"• Faites défiler la barre d’outils pour afficher d’autres options",
+		"• Faites défiler la barre d’outils pour afficher d’autres options"
 	},
 	file = "Fichier",
 	new = "Nouveau",
@@ -17,7 +17,7 @@
 	add = "Ajouter",
 	remove = "Retirer",
 	rotate = "Tourner",
-	flip = "Flip",
+	flip = "Retourner",
 	color = "C",
 	offset = "Décalage",
 	scale = "Échelle",
@@ -38,5 +38,5 @@
 	blockSettings = "Propriétés du modèle",
 	projectorSettings = "Propriétés du projecteur",
 	elementSettings = "Propriétés de la forme",
-	failedToPrint = "Impossible d'imprimer",
+	failedToPrint = "Impossible d'imprimer"
 }
