--- a/Applications/3D Print.app/Localizations/Spanish.lang
+++ b/Applications/3D Print.app/Localizations/Spanish.lang
@@ -1,11 +1,11 @@
-{	
+{
 	help = "Ayuda",
 	helpInfo = {
 		"• Cada modelo consiste en formas. Su Recuento depende de las propiedades del servidor, pero por defecto son 24 por cada modelo",
 		"• El Modelo tambien puede tener dos estados: passivo y activo. Si tu pones un modelo en el mundo de minecraft y haces un click en el, el modelo cambiara su estado al opuesto. La limitacion de las Formas esta limitado en los dos estados",
 		"• Presiona Click Izquierdo para poner el primer punto de la Forma por X y Y. Arrastra el raton para cambiar el tamaño de la forma. Usa la rueda del raton para cambiar la coordenada Z. Suelta el Boton Para acabar de editar la forma",
 		"• Presiona Click Derecho para seleccionar la Forma debajo del cursor",
-		"• Desplácese por la barra de herramientas para mostrar otras opciones",
+		"• Desplácese por la barra de herramientas para mostrar otras opciones"
 	},
 	file = "Archivo",
 	new = "Nuevo",
@@ -19,12 +19,12 @@
 	rotate = "Rotar",
 	flip = "Dar la Vuelta",
 	color = "C",
-	offset = "Offset",
+	offset = "Compensar",
 	scale = "Escala",
 	projectorEnabled = "Habilitado",
-	xAxis = "X-axis",
-	yAxis = "Y-axis",
-	zAxis = "Z-axis",
+	xAxis = "eje x",
+	yAxis = "eje Y",
+	zAxis = "Eje Z",
 	lightLevel = "Nivel de Luz",
 	emitRedstone = "Emite Redstone",
 	collidable = "Colision",
@@ -38,5 +38,5 @@
 	blockSettings = "Propiedades del Modelo",
 	projectorSettings = "Propiedades del proyector",
 	elementSettings = "Propiedades de la forma",
-	failedToPrint = "Error al Imprimir",
+	failedToPrint = "Error al Imprimir"
 }
