--- a/Applications/App Market.app/Localizations/French.lang
+++ b/Applications/App Market.app/Localizations/French.lang
@@ -1,6 +1,6 @@
 {
 	statistics = "Statistiques",
-	messages = "Messages",
+	messages = "messages",
 	account = "Compte",
 	settings = "Paramètres",
 	newMessage = "Nouveau message",
@@ -13,14 +13,14 @@
 	typeUserName = "Tapez le nom d'utilisateur",
 	yourText = "Vous :",
 	hereBeYourDialogs = "Voici vos conversations",
-	hideApplicationIcons = "Hide application icons",
+	hideApplicationIcons = "Masquer les icônes des applications",
 	
 	categoryOverview = "Aperçu",
 	categoryApplications = "Applications",
 	categoryLibraries = "API",
-	categoryScripts = "Scripts",
+	categoryScripts = "Scénarios",
 	categoryUpdates = "Mises à jour",
-
+	
 	statisticsNewUser = "Nouvel utilisateur",
 	statisticsMostPopularUser = "Plus actif",
 	statisticsUsersCount = "Nombre d'utilisateurs",
@@ -28,7 +28,7 @@
 	statisticsReviewsCount = "Nombre de commentaires",
 	statisticsPopularPublication = "(publication populaire)",
 	statisticsMessagesCount = "Nombre de messages",
-
+	
 	whatsNew = "Quoi de neuf",
 	whatsNewInVersion = "Quoi de neuf dans la version",
 	areYouSure = "Êtes-vous sûr de vouloir supprimer la publication ?",
@@ -38,7 +38,7 @@
 	mainFileURL = "URL du fichier principal",
 	mainFileName = "Nom du fichier principal",
 	iconURL = "URL de l'icône",
-	description = "Description",
+	description = "La description",
 	dependenciesAndResources = "Dépendances et ressources",
 	save = "Enregistrer",
 	cancel = "Annuler",
@@ -69,11 +69,11 @@
 	singleSession = "Enregister le mot de passe",
 	currentPassword = "Mot de passe actuel",
 	language = "Langue de la description",
-	publications = "Publications",
+	publications = "Ouvrages",
 	notRegistered = "Pas encore inscrit ?",
 	createAccount = "Créer un compte",
 	registrationSuccessfull = "Vérifiez votre boite mail et le dossier de courrier indésirable pour valider votre compte",
-
+	
 	search = "Rechercher",
 	byPopularity = "Par popularité",
 	byRating = "Par notation",
@@ -88,7 +88,7 @@
 	page = "Page",
 	updateAll = "Tout mettre à jour",
 	noUpdates = "Aucune mises à jour n'est disponible",
-
+	
 	changeReview = "Changer de critique",
 	developer = "Développeur",
 	version = "Version",
@@ -108,5 +108,5 @@
 	no = "Non",
 	of = "sur",
 	usersLoveReview = "utilisateurs ont trouvé cet avis utile",
-	thanksForVote = "Merci pour votre avis.",
+	thanksForVote = "Merci pour votre avis."
 }
