--- a/Applications/MineCode IDE.app/Localizations/Dutch.lang
+++ b/Applications/MineCode IDE.app/Localizations/Dutch.lang
@@ -7,10 +7,10 @@
 	convertCase = "Converteer case",
 	openingFile = "Openen",
 	arguments = "Afzonderlijke argumenten via komma",
-	launchWithArguments = "Voer met argumenten uit",	
+	launchWithArguments = "Voer met argumenten uit",
 	addBreakpoint = "Breekpunt toevoegen",
 	clearBreakpoints = "Breekpunten verwijderen",
-	finishDebug = "Stop",
+	finishDebug = "Hou op",
 	continueDebug = "Hervat",
 	gotoLine = "Ga naar lijn",
 	lineNumber = "Lijn",
@@ -64,5 +64,5 @@
 	indent = "Inspringen",
 	unindent = "Terugspringen",
 	flashEEPROM = "EEPROM Flashen",
-	flashingEEPROM = "Bezig met flashen. Schakel de computer niet uit...",
+	flashingEEPROM = "Bezig met flashen. Schakel de computer niet uit..."
 }
