--- a/Applications/MineCode IDE.app/Localizations/Spanish.lang
+++ b/Applications/MineCode IDE.app/Localizations/Spanish.lang
@@ -7,7 +7,7 @@
 	convertCase = "Convertir mayusculas",
 	openingFile = "Abriendo",
 	arguments = "Separar argumentos mediante comas",
-	launchWithArguments = "Ejecutar con argumentos",	
+	launchWithArguments = "Ejecutar con argumentos",
 	addBreakpoint = "Añadir punto de interrupcion",
 	clearBreakpoints = "Eliminar puntos de interrupcion",
 	finishDebug = "Detener",
@@ -15,7 +15,7 @@
 	gotoLine = "Ir a linea",
 	lineNumber = "Linea",
 	selectAndPasteColor = "Seleccionar y pegar color",
-	url = "http://example.com/something.lua",
+	url = "http://ejemplo.com/algo.lua",
 	getFromWeb = "Abrir desde URL",
 	downloading = "Descargando archivo...",
 	debugging = "Depurador en linea ",
@@ -64,5 +64,5 @@
 	indent = "Sangrado de texto",
 	unindent = "Desangrado de texto",
 	flashEEPROM = "Flashear to EEPROM",
-	flashingEEPROM = "Flasheo en progreso. No apages el ordenador...",
+	flashingEEPROM = "Flasheo en progreso. No apages el ordenador..."
 }
