--- a/Localizations/Ukrainian.lang
+++ b/Localizations/Ukrainian.lang
@@ -45,7 +45,7 @@
 	toDirectory = "в каталозі",
 	copying = "Копіювання",
 	faylaBlyad = "файла",
-
+	
 	areYouSure = "Ви впевнені?",
 	emptyTrash = "Очистити кошик",
 	type = "Тип",
@@ -56,9 +56,9 @@
 	folder = "Папка",
 	unknown = "Невідомо",
 	calculatingSize = "йде підрахунок…",
-	filesWillBeRemovedPermanently = "file(s) will be removed permanently",
-	fileDeletingFailure = "Failed to delete file",
-
+	filesWillBeRemovedPermanently = "файл(и) буде видалено назавжди",
+	fileDeletingFailure = "Не вдалося видалити файл",
+	
 	properties = "Властивості",
 	newFolderFromChosen = "Нова папка з обраного",
 	create = "Створити",
@@ -94,33 +94,33 @@
 	sortByType = "По типу",
 	sortByName = "По імені",
 	sortByDate = "По даті",
-
+	
 	aboutSystem = "Про систему",
 	updates = "Оновлення",
 	update = "Оновити",
 	shutdown = "Вимкнути",
 	logout = "Вихід із системи",
 	reboot = "Перезавантажити",
-
+	
 	shortcutIsCorrupted = "Ярлик пов'язаний з неіснуючим файлом",
 	sortAutomatically = "Вирівняти по сітці",
 	onDesktop = "На робочому столі",
 	inCurrentDirectory = "В поточному каталозі",
-
+	
 	errorWhileRunningProgram = "Помилка під час роботи ",
 	sendedFeedback = "Звіт відправлений",
 	sendFeedback = "Відправити звіт",
 	yourContacts = "Ваші контакти",
 	additionalInfo = "Додаткова інформація",
 	stackTraceback = "Стек помилки",
-
+	
 	favourite = "Вибране",
 	search = "Пошук",
 	mounts = "Пристрої",
-
+	
 	uploadToPastebin = "Завантажити на Pastebin",
 	pasteName = "Вставити ім'я",
 	uploading = "Йде завантаження...",
 	uploadingSuccess = "Завантажено в ",
-	uploadingFailure = "Помилка при завантаженні: ",
+	uploadingFailure = "Помилка при завантаженні: "
 }
