--- a/Localizations/French.lang
+++ b/Localizations/French.lang
@@ -56,7 +56,7 @@
 	folder = "Dossier",
 	unknown = "Inconnu",
 	calculatingSize = "calcule en cours ...",
-	filesWillBeRemovedPermanently = "le(s) fichier(s) seront définitivement supprimés",
+	filesWillBeRemovedPermanently = "le fichier(s) seront définitivement supprimés",
 	fileDeletingFailure = "Impossible de supprimer le fichier",
 	
 	properties = "Propriétés",
