Fix issues noted by MrFredber

--- a/Applications/App Market.app/Localizations/French.lang
+++ b/Applications/App Market.app/Localizations/French.lang
@@ -1,6 +1,6 @@
 {
 	statistics = "Statistiques",
-	messages = "messages",
+	messages = "Messages",
 	account = "Compte",
 	settings = "Paramètres",
 	newMessage = "Nouveau message",
