поправил перевод flash сделал как в локализации MineOS
ШО? кто это писал? короче сделал как в локализации MineOS

--- a/Applications/MineCode IDE.app/Localizations/Ukrainian.lang
+++ b/Applications/MineCode IDE.app/Localizations/Ukrainian.lang
@@ -64,5 +64,5 @@
 	indent = "Табулювати",
 	unindent = "Детабулювати",
 	flashEEPROM = "Записати на EEPROM",
-	flashingEEPROM = "Блимає в процесі. Не вимикати комп'ютер...",
+	flashingEEPROM = "Запис в процесі. Не вимикайте комп'ютер...",
 }
