--- a/Applications/3D Print.app/Localizations/Ukrainian.lang
+++ b/Applications/3D Print.app/Localizations/Ukrainian.lang
@@ -18,7 +18,7 @@
 	remove = "Видалити",
 	rotate = "Повернути",
 	flip = "Відобразити",
-	color = "К",
+	color = "Колір",
 	offset = "Зсув",
 	scale = "Масштаб",
 	projectorEnabled = "Увімкнено",
