"Програмне забеспечення" там даже чуть ниже так написано

--- a/Applications/App Market.app/Localizations/Ukrainian.lang
+++ b/Applications/App Market.app/Localizations/Ukrainian.lang
@@ -81,7 +81,7 @@
 	byName = "По імені",
 	desc = "За зменшенням",
 	asc = "За зростанням",
-	publish = "Опублікувати ПО",
+	publish = "Опублікувати ПЗ",
 	install = "Встановити",
 	installed = "Встановлено",
 	update = "Оновити",
