вот тут вообще беда
"Четвер" так что Чт
"травень" ведь слово "може" на русский это "может"

--- a/Applications/Calendar.app/Localizations/Ukrainian.lang
+++ b/Applications/Calendar.app/Localizations/Ukrainian.lang
@@ -1,12 +1,12 @@
 {
-	weekLine = "Пн Вт Ср Ч Пт Сб Нд",
-	weekLineAlt = "Су Пн Вт Ср Ч Пт Сб",
+	weekLine = "Пн Вт Ср Чт Пт Сб Нд",
+	weekLineAlt = "Нд Пн Вт Ср Чт Пт Сб",
 	months = {
-		"січня",
+		"січень",
 		"лютий",
 		"березень",
 		"квітень",
-		"Може",
+		"травень",
 		"червень",
 		"липень",
 		"серпень",
@@ -16,6 +16,6 @@
 		"Грудень",
 	},
 	startWeek = "Початок тижня з",
-	monday = "понеділок",
-	sunday = "неділя",
+	monday = "понеділка",
+	sunday = "неділі",
 }
